--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div>
-        <canvas id="myChart" width="500" height="500">
+        <canvas id="myChart">
         </canvas>
     </div>
     <script src="node_modules/chart.js/dist/chart.js"></script>
@@ -23,10 +23,6 @@
                     type: 'bar',
                     label: 'Bar Dataset',
                     data: [10, 20, 30, 40]
-                }, {
-                    type: 'line',
-                    label: 'Line Dataset',
-                    data: [50, 50, 50, 50],
                 }],
                 labels: ['January', 'February', 'March', 'April']
             }
