added relevant fake data

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             data: {
                 datasets: [{
                     type: 'bar',
-                    label: 'Bar Dataset',
+                    label: 'How to...',
                     data: [10, 20, 30, 40]
                 }],
-                labels: ['January', 'February', 'March', 'April']
+                labels: ['tie a noose', 'play powerball', 'find standard deviation', 'cook food']
             }
         });
     </script>
